<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App name -->
    <string name="app_name">Tinfoil for Facebook</string>
    <string name="app_name_short">Tinfoil</string>

    <!-- Labels -->
    <string name="lbl_dialog_alert">Alert</string>
    <string name="lbl_dialog_close">Close</string>
    <string name="lbl_dialog_ok">OK</string>

    <!-- Context menu items -->
    <string name="menu_desktop">Desktop</string>
    <string name="menu_mobile">Mobile</string>
    <string name="menu_jump_top">Jump to top</string>
    <string name="menu_news_feed">News feed</string>
    <string name="menu_share">Share</string>
    <string name="menu_copy_url">Copy URL</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_about">About</string>
    <string name="menu_exit">Kill</string>

    <!-- Preferences -->
    <string name="pref_cat_access">Access</string>
    <string name="pref_cat_general">General</string>
    <string name="prefs_allow_checkins">Allow Check-ins</string>
    <string name="prefs_allow_checkins_sry">Allows the mobile app to use coarse location in order to check-in to places</string>
    <string name="prefs_open_links_inside">Open links inside app</string>
    <string name="prefs_open_links_inside_sry">Any links being opened from the mobile app will open from within the app instead of the browser</string>
    <string name="prefs_mobile_site">Mobile/Desktop site</string>
    <string name="prefs_mobile_site_sry">Force the use of the mobile or desktop site</string>

    <array name="prefs_mobile_site_list">
        <item>Auto</item>
        <item>Force mobile site</item>
        <item>Force desktop site</item>
        <item>Fastbook (Experimental)</item>
    </array>
    <array name="prefs_mobile_site_list_values">
        <item>auto</item>
        <item>mobile</item>
        <item>desktop</item>
        <item>fastbook</item>
    </array>

    <string name="pref_hide_ab">Hide ActionBar</string>
    <string name="pref_hide_ab_sry">EXPERIMENTAL: Automatically hide the ActionBar when not being used. Fling down to make it appear again.</string>
    <string name="pref_logcat">System logging</string>
    <string name="pref_logcat_sry">Enable system logging. Useful when helping developer debug problems with the app</string>
    <string name="pref_about">About</string>
    <string name="pref_about_sry">Written by Daniel Velazco. Click here for more information.</string>
    <!-- End preferences -->
    <!-- Text used on the "about" dialog -->
    <string name="txt_checkins_disables">\nFacebook is trying to access your location.\n
\nMost likely you are trying to \"Check-in\" to a specific place. While Tinfoil has optional permissions used for this, it is disabled by default.\n
\nYou can enable this feature by going to the Preferences and checking the option that says \"Allow Check-ins.\"\n
\nTinfoil only shares \"Coarse location\", this doesn\'t use the GPS, only Network and Wi-fi location in order to save battery. However, Coarse Location is not as accurate as Fine Location.\n
\n</string>
    <!-- Text used on the "about" dialog -->
    <string name="txt_about">\nDeveloped by Daniel Velazco.
\nvelazcod@gmail.com
\nhttp://www.danvelazco.com\n
\n
\nSource code:
\nhttps://github.com/velazcod/Tinfoil-Facebook\n
\n
\nThis app is for those users that require a Tinfoil Hat when logging in to Facebook. It creates a sandbox for facebook\'s mobile site. Requires INTERNET permissions, and if you are skeptic about it, feel free to check the source code listed above. Coarse location permissions are required but location is not used unless you turn \"Allow Check-ins\" in the preferences.\n
\n</string>

</resources>