<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/menu_jump_top"
        android:alphabeticShortcut="@string/menu_jump_top"
        android:icon="@android:drawable/ic_menu_upload"
        android:showAsAction="ifRoom"
        android:title="@string/menu_jump_top"/>
    <item
        android:id="@+id/menu_preferences"
        android:alphabeticShortcut="@string/menu_preferences"
        android:icon="@android:drawable/ic_menu_preferences"
        android:showAsAction="ifRoom"
        android:title="@string/menu_preferences"/>
    <item
        android:id="@+id/menu_refresh"
        android:alphabeticShortcut="@string/menu_refresh"
        android:icon="@android:drawable/ic_menu_rotate"
        android:showAsAction="ifRoom"
        android:title="@string/menu_refresh"/>
    <item
        android:id="@+id/menu_notifications"
        android:alphabeticShortcut="@string/menu_notifications"
        android:icon="@android:drawable/ic_menu_info_details"
        android:showAsAction="never"
        android:title="@string/menu_notifications"/>
    <item
        android:id="@+id/menu_news_feed"
        android:alphabeticShortcut="@string/menu_news_feed"
        android:icon="@android:drawable/ic_menu_view"
        android:showAsAction="never"
        android:title="@string/menu_news_feed"/>
    <item
        android:id="@+id/menu_share"
        android:alphabeticShortcut="@string/menu_copy_url"
        android:icon="@android:drawable/ic_menu_share"
        android:showAsAction="never"
        android:title="@string/menu_share"/>
    <item
        android:id="@+id/menu_copy_url"
        android:alphabeticShortcut="@string/menu_copy_url"
        android:icon="@android:drawable/ic_menu_share"
        android:showAsAction="never"
        android:title="@string/menu_copy_url"/>
    <item
        android:id="@+id/menu_exit"
        android:alphabeticShortcut="@string/menu_exit"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:showAsAction="never"
        android:title="@string/menu_exit"/>
</menu>